# data-engineering-project

./: .gitignore  pyproject.toml
course/week1/docker_sql/: Dockerfile  data_analysis.ipynb  docker-compose.yaml
course/week1/terraform_setup/: .gitignore  main.tf  variables.tf
course/week2/airflow/: Dockerfile  docker-compose.yaml
course/week_1/docker_sql/: data_analysis.py  pipeline.py  pyproject.toml
course/week_1/terraform_setup/: .gitignore  .terraform.lock.hcl  Untitled Diagram.drawio  terraform.tfstate  terraform.tfstate.backup  tf.plan
course/week_1/terraform_setup/.terraform/: terraform.tfstate
